Nov 10 2002  2.7.1  Initial support for multiple capture sources on one server.
                     MAJOR CHANGES TO THE CONFIG FILE - READ THE NEW DEFAULT
                     CONFIGS OR THINGS WILL NOT WORK.
                    Fixed kismet_monitor to work with the new source format
Nov 09 2002  2.7.1  Added ability to name servers via the "servername" 
                     config file.
                    Fixed bug which included networks flagged by the tracker
                     for removal in XML/CSV/etc
                    Improved XML/CSV/etc export speed
                    Inlined network sorting operators for speed
                    Added __attribute__ ((packed)) to packet fragments
Nov 08 2002  2.7.1  Deprecated the "generic" capture source (not to be confused
                     with the generic card type)
Nov 07 2002  2.7.1  Various errno cleanups throughout the source
                    Updated beacon logging to log beacons with new SSIDs
                    Fixed nasty memory leak in tcpclient
Nov 06 2002  2.7.1  Fixed timestamp and capture-level noise packet reporting
                     for wsp100
                    Fixed panelfront packet type dumps
                    Changed wsp100 snmp calls to be more widely compatable
Nov 05 2002  2.7.1  Fixed kismet_monitor host:port support for WSP100 sensor
                    Stripped unneeded (and incorrect) exception fd from selects
                    Minor memory leaks and bugs fixed in tcpclient
                    Major restructuring of the packet decoders and support for
                     initial decoding of PHY layer packets from devices which
                     report them.
                    Fixed wsp100 capture interface being read from config
Nov 04 2002  2.7.1  Added 'gstsearch' exploit detection
                    Added preliminary support for the WSP100 remote sensor 
                     under *nix.
                    Added data ACK packet type, still discarding ACKS