@@ -1,3 +1,4 @@
+Nov 11 2002  2.7.1  Updated kismet_unmonitor to work with new source format
 Nov 10 2002  2.7.1  Initial support for multiple capture sources on one server.
                      MAJOR CHANGES TO THE CONFIG FILE - READ THE NEW DEFAULT
                      CONFIGS OR THINGS WILL NOT WORK.
